# chromadb-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  collection.rs  error.rs  lib.rs  main.rs
tests/: end-to-en.rs
