[package]
name = "chromadb-rs"
version = "0.1.0"
edition = "2021"
authors = ["Pierre-Louis Létoquart <randlgint@proton.me>"]
homepage = "https://github.com/PierreLouisLetoquart/chroma-rs.git"
repository = "https://github.com/PierreLouisLetoquart/chroma-rs.git"
keywords = ["chroma", "chroma-db", "vector-db", "database", "db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
