[package]
name = "chromadb-rs"
version = "0.1.6"
edition = "2021"
authors = ["Pierre-Louis Létoquart <randlgint@proton.me>"]
description = "The unofficial lib for Chroma vector database in rust"
license = "MIT"
homepage = "https://github.com/PierreLouisLetoquart/chroma-rs.git"
repository = "https://github.com/PierreLouisLetoquart/chroma-rs.git"
keywords = ["chroma", "chroma-db", "vector-db", "database", "db"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
